content/boundary/v1.0.x/content/docs/credentials/configure-credential-injection.mdx
---
layout: docs
page_title: Configure Boundary targets with credential injection
description: >-
  Configure credential injection for SSH and RDP targets so Boundary can inject credentials directly into the session, passwordlessly.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-18T17:04:41-05:00
last_modified: 2026-01-26T13:07:13-05:00
# END AUTO GENERATED METADATA
---

# Configure targets with credential injection

Configuring credential injection for an SSH or RDP target lets Boundary inject the matching credential directly into the session, so users connect without ever seeing or entering a password. TCP targets don't support this workflow.

This page assumes you already have an SSH or RDP target and a credential store configured. TCP targets aren't covered here since they don't support credential injection.

Credential injection is supported for:
- **SSH targets**: Protocol-aware SSH connections
- **RDP targets**: Protocol-aware RDP connections

## Requirements

You must have an existing target available that supports credential injection:

| Target type | Injection support | Requirement |
|---|---|---|
| RDP targets | Supported | Must be configured with at least one injected application credential |
| SSH targets | Supported | Must be configured with at least one injected application credential |
| TCP targets | Not supported | N/A |

- You must have configured either a static credential store or a Vault credential store:

  - To configure a static credential store, refer to [Create static credential stores](/boundary/docs/credentials/static-cred-boundary).
  - To configure a Vault credential store and credential library, refer to [Create Vault credential stores](/boundary/docs/credentials/static-cred-vault).

- You must have a static credential saved in your static credential store or Vault credential store. The credential must correspond to the target to which you want to authenticate.

- Specific target types have the following unique requirements:
  - **For RDP targets**: Network Level Authentication (NLA) is supported. Kerberos and NTLMv2 (NT LAN Manager version 2) authentication methods are supported for domain-joined workers. NTLMv2 is supported for non-domain-joined workers.

    RDP credential injection also has the following specific network requirements:

    - UDP transport must be disabled.
    - Server redirection is not supported.
    - The maximum supported TLS version is 1.2. TLS 1.3 is incompatible with Windows Server 2025.

    For more information about the specific versions of Windows that are supported for RDP credential injection, refer to the [RDP credential injection compatibility matrix](/boundary/docs/rdp-compatibility).

  - **For SSH targets**: Keyboard-interactive authentication is not supported. When you use username-password credentials, ensure that your SSH server is configured to allow password authentication.

## Configuration

Complete the following steps to configure targets with credential injection:

<Tabs>
<Tab heading="Admin UI" group="ui">

1. Log in to Boundary.
2. Select **Orgs** on the navigation pane.
3. Select your desired org.
4. Select the project where your target resides.
5. Click **Targets** on the navigation pane.
6. Click on your target you want to configure for credential injection.
7. Click on the **Injected Application Credential** tab.
8. Click **Managed** and select **Add Injected Application Credential** in the pull down menu.
9. Do one of the following:
   - **If you are using a static credential store**: Select the credential that corresponds to your target and click **Add Injected Application Credential**.
   - **If you are using a Vault credential store**: Select the credential library that corresponds to your target and click **Add Injected Application Credential**.

</Tab>
<Tab heading="CLI" group="cli">

1. Log into Boundary.

  ```shell-session
  $ boundary authenticate
  Please enter the login name (it will be hidden):
  Please enter the password (it will be hidden):
  ```

2. Add credential injection to target.

  ```shell-session
  $ boundary targets add-credential-sources \
    -id trdp_vO60a7TwpI \
    -injected-application-credential-source csvlt_Xqa6V6QwfM
  ```

<Tip>

  If you are using a static credential store, `brokered-credential-source` refers to the ID of a **credential** in the static credential store.

  If you are using a Vault credential store, `brokered-credential-source` refers to the ID of a **credential library** in the Vault credential store.

</Tip>

</Tab>

<Tab heading="Terraform" group="terraform">

Apply the following Terraform configuration to create a target `ssh_foo` and add
injected credentials to it.

```hcl
resource "boundary_target" "ssh_foo" {
  name         = "ssh_foo"
  description  = "SSH target"
  type         = "ssh"
  address      = "127.0.0.1"
  default_port = "22"
  scope_id     = boundary_scope.project.id
  injected_application_credential_source_ids = [
    boundary_credential_library_vault.foo.id
  ]
}
```

</Tab>
</Tabs>

## More information

Refer to the following topics for more information:

- [Create static credential stores](/boundary/docs/credentials/static-cred-boundary)
- [Create Vault credential stores](/boundary/docs/credentials/static-cred-vault)
- [Target types](/boundary/docs/domain-model/targets#target-types)
- [Credentials](/boundary/docs/domain-model/credentials)
- [RDP credential injection compatibility matrix](/boundary/docs/rdp-compatibility)
